deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-api
  namespace: nodejs
spec:
  replicas: 5
  selector:
    matchLabels:
      app: express-api
      role: express-api
  template:
    metadata:
      labels:
        app: express-api
        role: express-api
    spec:
      containers:
      - name: express-api
        image: lukondefmwila/express-test:1.0.2
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-express-nodejs-traffic
  namespace: nodejs
spec:
  podSelector:
    matchLabels:
      role: express-api
  ingress:
  -  from:
     -  namespaceSelector:
          matchLabels:
            tier: expressBackend
        podSelector:
          matchLabels:
            role: express-api
---
apiVersion: v1
kind: Service
metadata:
  name: express-service
spec:
  selector:
    app: express-api
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
